fix: issue where on mobile search drawer toggle the input and close buttons would visibly jump

--- a/web/themes/custom/cloudy/src/components/_header.scss
+++ b/web/themes/custom/cloudy/src/components/_header.scss
@@ -104,7 +104,7 @@
       @include media-breakpoint-up(md) {
         border-bottom: none;
         padding: $cloudy-space-6 $cloudy-space-4;
-        transition: background-color 0.2s ease, font-size 0.2s ease;
+        transition: background-color 0.2s ease;
         &:hover {
           background: $cloudy-color-neutral-100;
         }
@@ -139,7 +139,7 @@
       border-color: transparent; // Fixes issues with outlines over/underlapping
       min-width: 40px;
       padding: 0 $cloudy-space-4;
-      transition: all 0.2s ease-in-out;
+      transition: color 0.2s ease-in-out, background 0.2s ease-in-out;
       &:hover {
         background: $cloudy-color-neutral-100;
         .icon {
@@ -168,12 +168,24 @@
   }
   .navbar-mobile-search-drawer-wrapper {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     .region.region-header-form {
       flex-basis: 100%;
     }
-    .navbar-mobile-search-drawer {
+    .navbar-mobile-search-drawer__close {
       flex-basis: 28px;
+      padding: 0 $cloudy-space-3 0 $cloudy-space-4;
+      .icon {
+        color: $cloudy-color-neutral-0;
+        margin-right: 0;
+        cursor: pointer;
+        @include media-breakpoint-up(md) {
+          color: $cloudy-color-neutral-900;
+        }
+      }
+      .icon--size-m > svg {
+        margin-top: 0;
+      }
     }
   }
   .navbar-mobile-search-drawer {
@@ -182,7 +194,7 @@
     flex-grow: 1;
     -webkit-box-align: center;
     align-items: center;
-    padding: $cloudy-space-4 $cloudy-space-3 $cloudy-space-2 $cloudy-space-4;
+    padding: $cloudy-space-6 $cloudy-space-3 $cloudy-space-6 $cloudy-space-4;
     background: $cloudy-color-blue-800;
     order: 4;
     @include media-breakpoint-up(md) {
@@ -192,16 +204,9 @@
     @include media-breakpoint-up(lg) {
       display: none;
     }
-    .icon {
-      color: $cloudy-color-neutral-0;
-      margin-right: 0;
-      cursor: pointer;
-      @include media-breakpoint-up(md) {
-        color: $cloudy-color-neutral-900;
-      }
-    }
     .search-api-page-block-form .form-inline--search-block {
       max-width: 100%;
+      margin: 0;
     }
     input.form-autocomplete.form-text {
       width: 100%;
