--- a/web/themes/custom/cloudy/src/components/_search.scss
+++ b/web/themes/custom/cloudy/src/components/_search.scss
@@ -178,6 +178,8 @@ h1.homepage-title {
           padding: $cloudy-space-2 $cloudy-space-2 $cloudy-space-2 0;
           overflow: hidden;
           font-weight: 600;
+          min-height: 40px;
+          box-sizing: border-box;
           &:focus {
             box-shadow: none;
             outline: none;
@@ -188,6 +190,9 @@ h1.homepage-title {
         background: $cloudy-color-neutral-0;
         color: $cloudy-color-neutral-900;
         border: none;
+        height: 40px;
+        width: 40px;
+        transition: none;
       }
     }
     .form-item {
